--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,64 +1,61 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Arimil">
-	<main>
-		<h1>
-			<ruby>
-				よ<rt>Yo</rt>う<rt>u</rt>こ<rt>ko</rt>そ<rt>so</rt>!
-			</ruby>
-		</h1>
-	</main>
-	<footer>
-		<a href="https://github.com/Renari">
-			<img src="/iconmonstr-github-3.svg" alt="Github" />
-		</a>
-	</footer>
+  <main>
+    <h1>
+      <ruby>
+        よ<rt>Yo</rt>う<rt>u</rt>こ<rt>ko</rt>そ<rt>so</rt>!
+      </ruby>
+    </h1>
+  </main>
+  <footer>
+    <a href="https://github.com/Renari">
+      <img src="/iconmonstr-github-3.svg" alt="Github" />
+    </a>
+  </footer>
 </Layout>
 
 <style>
-	main {
-		margin: 0;
-		background: url("/background.jpg") no-repeat fixed center top/cover #000;
-		height: 100vh
-	}
-	h1 {
-		text-align: center;
-		color: white;
-		text-shadow:
-			-1px -1px 0 #000,
-			1px -1px 0 #000,
-			-1px 1px 0 #000,
-			1px 1px 0 #000;
-		position: absolute;
-		width: 100%;
-		top: 50%;
-		margin: 0;
-		font-family: sans-serif;
-	}
-	footer {
-		position: fixed;
-		width: 100%;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		text-align: right;
-	}
-	footer a {
-		text-decoration: none;
-	}
-	footer a:last-of-type {
-		margin-right: 5px;
-	}
-	footer img{
-		width: 64px;
-		height: 64px;
-		filter:
-			drop-shadow(-1px -1px 0px #ffd53e)
-			drop-shadow(1px -1px 0px #ffd53e)
-			drop-shadow(1px 1px 0px #ffd53e)
-			drop-shadow(-1px 1px 0px #ffd53e);
-		margin: 3px;
-	}
+  main {
+    margin: 0;
+    background: url("/background.jpg") no-repeat fixed center top/cover #000;
+    height: 100vh;
+  }
+  h1 {
+    text-align: center;
+    color: white;
+    text-shadow:
+      -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    margin: 0;
+    font-family: sans-serif;
+  }
+  footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: right;
+  }
+  footer a {
+    text-decoration: none;
+  }
+  footer a:last-of-type {
+    margin-right: 5px;
+  }
+  footer img {
+    width: 64px;
+    height: 64px;
+    filter: drop-shadow(-1px -1px 0px #ffd53e) drop-shadow(1px -1px 0px #ffd53e)
+      drop-shadow(1px 1px 0px #ffd53e) drop-shadow(-1px 1px 0px #ffd53e);
+    margin: 3px;
+  }
 </style>
