--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,104 @@ import Layout from "../layouts/Layout.astro";
   </footer>
 </Layout>
 
+<canvas id="grass-canvas"></canvas>
+
+<script>
+  const canvas = document.getElementById("grass-canvas") as HTMLCanvasElement;
+  const ctx = canvas.getContext("2d");
+
+  let width = window.innerWidth;
+  let height = window.innerHeight;
+
+  canvas.width = width;
+  canvas.height = height;
+
+  const grassColors = ["#2f7b44", "#498b5a", "#6fb57c"];
+
+  class GrassParticle {
+    x: number;
+    y: number;
+    size: number;
+    color: string;
+    angle: number;
+    spinSpeed: number;
+    vx: number;
+    vy: number;
+    curve: number;
+
+    constructor(initX?: number, initY?: number) {
+      this.randomize(initX ?? Math.random() * width, initY ?? Math.random() * height);
+    }
+
+    randomize(x: number, y: number) {
+      this.x = x;
+      this.y = y;
+      this.size = Math.random() * 30 + 20;
+      this.color = grassColors[Math.floor(Math.random() * grassColors.length)];
+      this.angle = Math.random() * Math.PI * 2;
+      this.spinSpeed = (Math.random() - 0.5) * 0.03;
+      this.curve = (Math.random() - 0.5) * this.size * 0.5;
+
+      this.vx = Math.random() * 2;
+      this.vy = (Math.random() - 0.5) * 1;
+    }
+
+    update() {
+      this.x += this.vx;
+      this.y += this.vy;
+      this.angle += this.spinSpeed;
+
+      // If out of bounds, regenerate as a new particle from the left
+      if (this.x > width + 50 || this.x < -50 || this.y > height + 50 || this.y < -50) {
+        this.randomize(-50, Math.random() * height);
+      }
+    }
+
+    draw(ctx: CanvasRenderingContext2D) {
+      ctx.save();
+      ctx.translate(this.x, this.y);
+      ctx.rotate(this.angle);
+      ctx.fillStyle = this.color;
+      
+      ctx.beginPath();
+      ctx.moveTo(-this.size/2, 0);
+      ctx.quadraticCurveTo(0, -this.size/4 + this.curve, this.size/2, 0);
+      ctx.quadraticCurveTo(0, this.size/4 + this.curve, -this.size/2, 0);
+      ctx.fill();
+      
+      ctx.restore();
+    }
+  }
+
+  let particles: GrassParticle[] = [];
+  const particleCount = 12;
+
+  for (let i = 0; i < particleCount; i++) {
+    particles.push(new GrassParticle());
+  }
+
+  function animate() {
+    if (!ctx) return;
+    ctx.clearRect(0, 0, width, height);
+
+    particles.forEach((p) => {
+      p.update();
+      p.draw(ctx);
+    });
+
+    requestAnimationFrame(animate);
+  }
+
+  requestAnimationFrame(animate);
+
+  window.addEventListener("resize", () => {
+    width = window.innerWidth;
+    height = window.innerHeight;
+    canvas.width = width;
+    canvas.height = height;
+  });
+</script>
+
 <style>
   main {
     margin: 0;
@@ -44,6 +142,7 @@ import Layout from "../layouts/Layout.astro";
     left: 0;
     right: 0;
     text-align: right;
+    z-index: 10; /* Ensure footer is above grass */
   }
   footer a {
     text-decoration: none;
@@ -57,5 +156,14 @@ import Layout from "../layouts/Layout.astro";
     filter: drop-shadow(-1px -1px 0px #ffd53e) drop-shadow(1px -1px 0px #ffd53e)
       drop-shadow(1px 1px 0px #ffd53e) drop-shadow(-1px 1px 0px #ffd53e);
     margin: 3px;
+  }
+  #grass-canvas {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1; /* Above background, below content */
   }
 </style>
