--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,15 +32,15 @@ import Layout from "../layouts/Layout.astro";
   const grassColors = ["#2f7b44", "#498b5a", "#6fb57c"];
 
   class GrassParticle {
-    x: number;
-    y: number;
-    size: number;
-    color: string;
-    angle: number;
-    spinSpeed: number;
-    vx: number;
-    vy: number;
-    curve: number;
+    x!: number;
+    y!: number;
+    size!: number;
+    color!: string;
+    angle!: number;
+    spinSpeed!: number;
+    vx!: number;
+    vy!: number;
+    curve!: number;
 
     constructor(initX?: number, initY?: number) {
       this.randomize(initX ?? Math.random() * width, initY ?? Math.random() * height);
@@ -142,7 +142,7 @@ import Layout from "../layouts/Layout.astro";
     left: 0;
     right: 0;
     text-align: right;
-    z-index: 10; /* Ensure footer is above grass */
+    z-index: 10;
   }
   footer a {
     text-decoration: none;
@@ -164,6 +164,6 @@ import Layout from "../layouts/Layout.astro";
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 1; /* Above background, below content */
+    z-index: 1;
   }
 </style>
